# aws-glue-example-app

./: Jenkinsfile  README.md  pyproject.toml
app/: glue-example.ipynb  main.ipynb
app/src/: my-glue-script.py  my_glue_script.py
app/test/: my_glue_script_test.py
data/: users.csv
scripts/: run_docker.sh  run_jupyter.sh  submit_job.sh
terraform/environments/dev/: main.tf  modules.tf
terraform/environments/stg/: main.tf  modules.tf
terraform/modules/aws-glue-job/: glue.tf  iam.tf  main.tf  output.tf  s3.tf  variables.tf
